Development Portal (2017-09-21 shi)
==============================
Fixed url encoding for related-activity in SAVi


Development Portal (2017-09-19 shi)
==============================
Fix specific empty classes to not display
Fix lists in SAVi to wrap nice when longer
Update Print-Friendly css
Fix Print-Friendly images contrast in SAVi
Fix Print-Friendly title headers in SAVi
Updated font size of second titles in SAVi


Development Portal (2017-09-06 shi)
==============================
Tag element display in SAVi
Updated data_quality link to FAQ gen#13
Changed DONOR to PUBLISHER in table header
Updated column sort icons to fit
Updated Print-Friendly table
Updated footer text
Replace all instances of donor with publisher


Development Portal (2017-09-04 shi)
==============================
Fixed typo in view_countries.js
Fixed link colour for search
Fixed percentage views in *_activities.html
Updated chunks with generalised name
Updated translations
Updated csv download headers in view_list_activities.js
Added activity-status-code query to view_list_activities csv downloads
Added close button under fold on landing page


Development Portal (2017-09-03 shi)
==============================
Added donor and sector types to views
Removed hover titles from lists
Flex document linksin SAVi
Move EXPLORE to main landing page
Update links, layout and styles


Development Portal (2017-09-02 shi)
==============================
Added select aria-labels and img alt text
Minor css fixes overall site and footer links
Updated text on portal landing pages
Updated figure views - remove display:none; when refactored
Fix corresponding pages affected
Added translations for updated views
Updated footer links
Fixed scrollTop link


Development Portal (2017-09-01 shi)
==============================
Updated footer with D-Portal-Logs link
Added https info and link to Generator page
Updated translations for new footer link
Fix settings link
Updated search_view_text in translations