@@ -109,8 +109,8 @@ participating-org::before			{counter-increment:section; content:counter(section)
 participating-org narrative			{display:inline;}
 participating-org a					{display:initial;}
 participating-org a:link			{color:#000;}
-participating-org a:visited			{color:#000; text-decoration:underline;}
-participating-org a:hover			{color:#000;}
+participating-org a:visited			{color:#000;}
+participating-org a:hover			{color:#000; text-decoration:underline;}
 participating-org a:active			{color:#000;}
 participating-org[role="1"] narrative:nth-of-type(1):after,
 participating-org[role="funding"] narrative:nth-of-type(1):after		{content:"FUNDING ROLE"; font-size:14px; color:#000; display:inline; padding:0; padding-left:10px;}
@@ -123,7 +123,7 @@ participating-org[role="implementing"] narrative:nth-of-type(1):after	{content:"
 
 span-narrative.participating-role	{font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px; text-transform:uppercase; line-height:initial;}
 
-span.span_participating-org narrative:nth-of-type(n+2)			{display:block; padding:5px 0 0 20px; font-style:italic; font-size:16px; line-height:inherit;}
+span.span_participating-org narrative:nth-of-type(n+2)			{display:block; padding:5px 0 0 0; font-style:italic; font-size:16px; line-height:inherit;}
 
 
 /*	Location (version 2.02++)
@@ -250,10 +250,12 @@ result indicator .time.time-percent100 span	{display:none;}
 	============================================= */
 sector *		{display:none;}
 span.span_sector sector[vocabulary="DAC"],
-span.span_sector sector[vocabulary="1"]			{font-size:1.0em; color:#000; width:239px; display:inline-block; vertical-align:top; padding:30px 40px 40px 40px; max-height:80px; min-height:80px;}
+span.span_sector sector[vocabulary="1"],
+span.span_sector sector[vocabulary="2"]			{font-size:1.0em; color:#000; width:239px; display:inline-block; vertical-align:top; padding:30px 40px 40px 40px; max-height:80px; min-height:80px;}
 span.span_sector sector:nth-child(even)			{background-color:#e9e9e9;}
 span.span_sector sector[vocabulary="DAC"]:before,
 span.span_sector sector[vocabulary="1"]:before	{content:"SECTOR"; font-size:14px; color:#000; width:240px; display:block; margin-bottom:10px;}
+span.span_sector sector[vocabulary="2"]:before	{content:"SECTOR GROUP"; font-size:14px; color:#000; width:240px; display:block; padding-bottom:5px;}
 span.span_sector sector span					{color:#000; padding-top:5px;}
 span.span_sector sector span:nth-of-type(1)		{line-height:1.2em;}
 span.span_sector sector span:nth-of-type(2)		{color:#000;}
@@ -264,7 +266,7 @@ img.sector_pie	{padding:40px 20px;}
 /*	Budget table
 	============================================= */
 budget				  {display:block; width:958px; border-top:1px solid #000; padding:15px 0 5px 0; border-bottom:0;}
-budget:last-of-type	  {border-bottom:0px solid #000;}
+budget:last-of-type	  {border-bottom:0px solid #000; margin-bottom:20px;}
 budget:nth-of-type(1) {margin-top:0px; padding-top:0;}
 budget:nth-of-type(1):before {content:"Budgets"; font-size:20px; color:#000; display:block; padding:40px 40px 20px 40px; margin-bottom:25px;}
 budget:nth-of-type(1) period-start:before 	{content:"START DATE"; font-size:14px; color:#000; width:289px; display:block; padding-bottom:10px; border-bottom:1px solid #000; margin-bottom:15px; line-height:1.35em;}
@@ -384,4 +386,15 @@ related-activity[type="4"]:before	{content:"Multifunded ";}
 
 /*	Tag
 	============================================= */
-tag		{display:block; font-size:14px; color:#000;}
+span.span_span-openag			{width:880px; padding:0 40px 10px 40px; margin:0 auto; counter-reset:section; border-top:1px solid #000;}
+span.span_span-openag:before	{content:"Tag - AGROVOC"; font-size:20px; color:#000; display:block; padding:40px 40px 20px 40px; margin-bottom:10px; margin-left:-50px;}
+
+span-openag::before				{display:inline-block; counter-increment:section; content:counter(section) ". "; line-height:20px; font-size:18px; margin-right:5px;}
+span-openag						{display:flex; width:860px; padding:10px 0; font-size:1.0em; line-height:1.25em; position:relative; color:#000; text-transform:capitalize;}
+span-openag:last-of-type		{padding-bottom:30px;}
+
+a.a_openag						{color:#000; font-size:18px;}
+a.a_openag:link					{color:#000;}
+a.a_openag:visited				{color:#000;}
+a.a_openag:hover				{color:#000;}
+a.a_openag:active				{color:#000;}
