@@ -40,22 +40,22 @@ span.span_span-title narrative:nth-of-type(n+2)	{display:block; padding:10px 0 0
 
 /*	IATI Identifier
 	============================================= */
-iati-identifier 		{display:block; background-color:rgba(0,14,32,0.7); width:880px; font-size:20px; line-height:1.5em; padding:15px 40px; color:#FF7A00; margin:0 auto;}
+iati-identifier 		{display:block; background-color:rgba(0,14,32,0.7); width:880px; font-size:20px; line-height:1.5em; padding:15px 40px; color:#FFAB5E; margin:0 auto;}
 iati-identifier:before	{content:"IATI IDENTIFIER"; font-size:14px; color:#ccc; display:inline-block; vertical-align:baseline; padding-right:10px; min-width:120px;}
 iati-identifier div		{display:block;}
 a.a_iati-identifier		{width:960px; margin:0 auto; vertical-align:baseline;}
 a.a_xml_iati-identifier	{display:inline-block; vertical-align:baseline; width:50%;}
 a.a_xml_iati-identifier:before	{content:"VIEW SOURCE"; font-size:14px; color:#ccc; display:inline-block; vertical-align:baseline; padding-right:10px; min-width:120px;}
-a.a_xml_iati-identifier:link	{color:#FF7A00;}
-a.a_xml_iati-identifier:visited	{color:#FF7A00;}
-a.a_xml_iati-identifier:hover	{color:#FFAB5E;}
-a.a_xml_iati-identifier:active	{color:#FF7A00;}
+a.a_xml_iati-identifier:link	{color:#FFAB5E;}
+a.a_xml_iati-identifier:visited	{color:#FFAB5E;}
+a.a_xml_iati-identifier:hover	{color:#FF7A00;}
+a.a_xml_iati-identifier:active	{color:#FFAB5E;}
 a.a_slug				{display:inline-block; vertical-align:baseline; width:50%; text-align:right;}
 a.a_slug:before			{content:"VIEW IATI REGISTRY"; font-size:14px; color:#ccc; display:inline-block; vertical-align:baseline; padding-right:10px;}
-a.a_slug:link			{color:#FF7A00;}
-a.a_slug:visited		{color:#FF7A00;}
-a.a_slug:hover			{color:#FFAB5E;}
-a.a_slug:active			{color:#FF7A00;}
+a.a_slug:link			{color:#FFAB5E;}
+a.a_slug:visited		{color:#FFAB5E;}
+a.a_slug:hover			{color:#FF7A00;}
+a.a_slug:active			{color:#FFAB5E;}
 
 
 /*	Recipient countries
@@ -100,10 +100,10 @@ participating-org 					{display:flex; padding:10px 0 0 0; position:relative; lin
 participating-org::before			{counter-increment:section; content:counter(section) ". "; line-height:inherit; margin-right:5px;}
 participating-org narrative			{display:inline;}
 participating-org a					{display:initial;}
-participating-org a:link			{color:#FF7A00;}
-participating-org a:visited			{color:#FF7A00;}
-participating-org a:hover			{color:#FFAB5E;}
-participating-org a:active			{color:#FF7A00;}
+participating-org a:link			{color:#FFAB5E;}
+participating-org a:visited			{color:#FFAB5E;}
+participating-org a:hover			{color:#FF7A00;}
+participating-org a:active			{color:#FFAB5E;}
 participating-org[role="1"] narrative:nth-of-type(1):after,
 participating-org[role="funding"] narrative:nth-of-type(1):after		{content:"FUNDING ROLE"; font-size:14px; color:#ccc; display:inline; padding:0; padding-left:10px;}
 participating-org[role="2"] narrative:nth-of-type(1):after,
@@ -115,7 +115,7 @@ participating-org[role="implementing"] narrative:nth-of-type(1):after	{content:"
 
 span-narrative.participating-role	{font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px; text-transform:uppercase; line-height:initial;}
 
-span.span_participating-org narrative:nth-of-type(n+2)			{display:block; padding:5px 0 0 20px; font-style:italic; font-size:16px; line-height:inherit;}
+span.span_participating-org narrative:nth-of-type(n+2)			{display:block; padding:5px 0 0 0; font-style:italic; font-size:16px; line-height:inherit;}
 
 
 /*	Location (version 2.02++)
@@ -244,10 +244,12 @@ result indicator .time.time-percent100 span	{display:none;}
 	============================================= */
 sector *		{display:none;}
 span.span_sector sector[vocabulary="DAC"],
-span.span_sector sector[vocabulary="1"]			{font-size:1.0em; color:#FFF; width:240px; display:inline-block; vertical-align:top; padding:30px 40px 40px 40px; max-height:80px; min-height:80px;}
+span.span_sector sector[vocabulary="1"],
+span.span_sector sector[vocabulary="2"]			{font-size:1.0em; color:#FFF; width:240px; display:inline-block; vertical-align:top; padding:30px 40px 40px 40px; max-height:80px; min-height:80px;}
 span.span_sector sector:nth-child(even)			{background-color:rgba(0,14,32,0.7);}
 span.span_sector sector[vocabulary="DAC"]:before,
 span.span_sector sector[vocabulary="1"]:before	{content:"SECTOR"; font-size:14px; color:#ccc; width:240px; display:block; padding-bottom:5px;}
+span.span_sector sector[vocabulary="2"]:before	{content:"SECTOR GROUP"; font-size:14px; color:#ccc; width:240px; display:block; padding-bottom:5px;}
 span.span_sector sector span					{color:#FFF; padding-top:5px;}
 span.span_sector sector span:nth-of-type(1)		{line-height:1.2em;}
 span.span_sector sector span:nth-of-type(2)		{color:#ccc;}
@@ -391,4 +393,15 @@ related-activity[type="4"]:before	{content:"Multifunded ";}
 
 /*	Tag
 	============================================= */
-tag		{display:block; font-size:14px; color:#FFF;}
+span.span_span-openag			{width:880px; padding:0 40px; margin:0 auto; counter-reset:section;}
+span.span_span-openag:before	{content:"Secondary Classification - AGROVOC"; font-size:20px; color:#FFF; background-color:rgba(17,46,105,0.9); display:block; padding:20px 40px; margin-bottom:15px; width:900px; margin-left:-50px;}
+
+span-openag::before				{display:inline-block; counter-increment:section; content:counter(section) ". "; line-height:20px; font-size:18px; margin-right:5px;}
+span-openag						{display:flex; width:860px; padding:10px 0; font-size:1.0em; line-height:1.25em; position:relative; color:#FFF; text-transform:capitalize;}
+span-openag:last-of-type		{padding-bottom:30px;}
+
+a.a_openag						{color:#FFAB5E; font-size:18px;}
+a.a_openag:link					{color:#FFAB5E;}
+a.a_openag:visited				{color:#FFAB5E;}
+a.a_openag:hover				{color:#FF7A00;}
+a.a_openag:active				{color:#FFAB5E;}
