@@ -1,3 +1,12 @@
+Development Portal (2017-09-22 shi)
+==============================
+Display OpenAg tag in SAVi
+Display Sector vocab 2 in SAVi
+Update new tag element css
+Update Print-Friendly css
+Minor css fixes for activities
+
+
 Development Portal (2017-09-21 shi)
 ==============================
 Fixed url encoding for related-activity in SAVi
